plugins {
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'com.example'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }

    // Exclude commons-logging to avoid conflicts with spring-jcl
    all {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.shell:spring-shell-dependencies:3.3.1"
    }
}

dependencies {
    // Spring Boot starters
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.shell:spring-shell-starter'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'

    // Spring Integration
    implementation 'org.springframework.integration:spring-integration-stomp'
    implementation 'org.springframework.integration:spring-integration-websocket'

    // Spring Security
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    // Jakarta / Java EE
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Apache Commons
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'commons-io:commons-io:2.14.0'
    implementation 'commons-codec:commons-codec:1.15'

    // Apache POI
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    // Google Libraries
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.20.0'
    implementation 'com.google.zxing:core:3.5.0'
    implementation 'com.google.zxing:javase:3.5.0'
    implementation 'com.google.code.gson:gson:2.8.9'

    // JSON
    implementation 'org.json:json:20231013'

    // Documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Database
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'

    // AWS
    implementation 'io.awspring.cloud:spring-cloud-aws-messaging:2.4.4'
    implementation 'com.amazonaws:amazon-sqs-java-messaging-lib:2.1.1'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.495'
    implementation 'com.amazonaws:aws-java-sdk-sts:1.12.495'

    // Azure
    implementation 'com.microsoft.graph:microsoft-graph:6.13.0'
    implementation 'com.azure:azure-identity:1.12.2'
    implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:5.14.0'
    implementation 'com.azure:azure-core:1.50.0'
    implementation 'com.microsoft.azure.functions:azure-functions-java-library:3.1.0'
    implementation 'org.springframework.cloud:spring-cloud-function-adapter-azure:4.1.3'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Boot Thin Layout (for Spring Boot Maven plugin)
    implementation 'org.springframework.boot.experimental:spring-boot-thin-layout:1.0.31.RELEASE'
}

bootJar {
    archiveFileName = 'backend.jar'
}

springBoot {
    mainClass = 'com.example.backend.BackendApplication'
}
